syntax = "proto3";
package libvegas;
option go_package = "./pb";

message UserRecord {
    bytes recordID = 1;
    string partitionKey = 2;
    bytes data = 3;
} 

message Record {
   string shardID = 1;
   repeated UserRecord userRecords = 2;
}

message VoteRequest {
    string candidateID = 1;
    int64 term = 2;
}

message VoteResponse {
    int64 term = 1;
    bool yes = 2;
}

message HeartbeatRequest {
    string leaderID = 1;
    int64 term = 2;
}

message HeartbeatResponse {
    int64 term = 1;
}
